--- a/rest-hibernate/src/main/resources/application.properties
+++ b/rest-hibernate/src/main/resources/application.properties
@@ -3,3 +3,9 @@ server.port=8888
 endpoints.beans.id=springbeans
 endpoints.beans.sensitive=false
 endpoints.beans.enabled=true
+
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
